--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,27 +1,30 @@
 <div class="container">
+  <div class="back-to-users">
+    <a href="/users/<%= @team.user_id %>"><< Back to <%= @team.user.username %>'s profile</a>
+  </div>
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 mb-5">
       <div class="chart-header d-flex justify-content-center">
         <p> Daily SLP trend </p>
       </div>
       <div class="card-body chart-slp">
-        <canvas id="SLP-Chart" width="400" height="400" data-labels="<%= @dates.to_json %>" data-data="<%= @daily_slps.to_json %>"></canvas>
+        <canvas id="SLP-Chart" width="400" height="400" data-labels="<%= @dates_slp.to_json %>" data-data="<%= @daily_slp.to_json %>"></canvas>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-12 mb-5">
       <div class="chart-header d-flex justify-content-center">
         <p> MMR trend </p>
       </div>
       <div class="card-body">
-        <canvas id="SLP-Chart" width="400" height="400" data-labels="<%= @dates.to_json %>" data-data="<%= @daily_slps.to_json %>"></canvas>
+        <canvas id="MMR-Chart" width="400" height="400" data-labels="<%= @dates_mmr.to_json %>" data-data="<%= @daily_mmr.to_json %>"></canvas>
       </div>
     </div>
-    <div class="col-6">
+    <div class="col-12 mb-5">
       <div class="chart-header d-flex justify-content-center">
         <p> Rank trend </p>
       </div>
       <div class="card-body">
-        <canvas id="SLP-Chart" width="400" height="400" data-labels="<%= @dates.to_json %>" data-data="<%= @daily_slps.to_json %>"></canvas>
+        <canvas id="Ranking-Chart" width="400" height="400" data-labels="<%= @dates_rank.to_json %>" data-data="<%= @daily_rank.to_json %>"></canvas>
       </div>
     </div>
   </div>
