--- a/app/views/rankings/_list_ranking.html.erb
+++ b/app/views/rankings/_list_ranking.html.erb
@@ -7,7 +7,7 @@
         </div>
       </div>
       <div class="table-input-ranking-2 d-flex align-items-center justify-content-center m-0">
-        <a href="/ranking/teams/<%= team.ronin_address %>">
+        <a href="/ranking/teams/<%= team.ronin_address %>" style="color: #49423F; text-decoration: none; cursor: pointer;">
           <%= team[:scholar_name] == "" ? "-" : team[:scholar_name] %>
         </a>
       </div>
