--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -88,7 +88,11 @@
 
 .table-input-ranking-2 {
   width: 33.33%;
+}
 
+.link-to-kill {
+  color: #49423F !important;
+  text-decoration: none !important;
 }
 
 .pagination {
