--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -163,9 +163,7 @@
 }
 
 .card-avatar-dashboard {
-  height:40%;
-  min-height: 50px;
-
+  height: 50px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom: none;
@@ -174,8 +172,6 @@
 .card-username-dashboard {
   border: none;
   margin: auto;
-  margin-right: 5px;
-  margin-left: -5px;
 }
 
 .favorite {
