--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,11 @@
 .navbar-axie {
   justify-content: space-between;
   background: white;
-  position: sticky;
+  height: fit-content;
+  width: 100%;
   top: 0px;
   z-index: 999;
+  position: sticky;
 }
 
 .navbar-axie .navbar-collapse {
@@ -15,16 +17,7 @@
 }
 
 .nav-show {
-
-  @media (max-width: 20000px) {
-    /* line 20, node_modules/bootstrap/scss/_containers.scss */
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    max-width: 100vw;
-    width: 95vw;
-  }
+  width: 90%;
 }
 
 .nav-link {
