--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,32 +1,24 @@
-.user-show {
-
-  @media (max-width: 20000px) {
-    /* line 20, node_modules/bootstrap/scss/_containers.scss */
-    left: 50%;
-    right: 50%;
-    margin-left: 50px;
-    margin-right: 50px;
-    max-width: 100vw;
-    width: 100vw;
-  }
-
-}
-
 .general-stats {
-  margin-top: 2%;
-  width: 15%;
+  width: 100%;
   margin-left: 0.5%;
 }
 
 .user-stats {
-  margin-top: 2%;
-  width: 85%;
-  margin-left: 1%;
-  margin-right: 5%;
+  height: fit-content;
 }
 
 .scholars-breakdown {
   li {
     list-style: none;
   }
+}
+
+.non-stuck {
+  z-index: 0;
+  width: 100%;
+}
+
+.users-grid {
+  width: 90%;
+  gap: 0px;
 }
