--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -78,7 +78,7 @@
 
 .team-delete-button {
 
-  margin: auto;
+  margin-top: 4.3%;
   margin-left: 5px;
 
   input {
@@ -86,11 +86,11 @@
     background-color: rgb(240, 99, 99);
     border: none;
     border-radius: 150px;
-    padding: 0%;
+    transition: transform 0.1s;
+    margin-left: 2%;
     padding-right: 15px;
     padding-left: 15px;
-    transition: transform 1s;
-    height: 24px !important;
+    height: 38px;
   }
 }
 
@@ -115,4 +115,17 @@ input.visible-input-index {
       margin-top: 40%;
 
   }
+}
+
+.sf-submit input {
+  color: #fff;
+  background-color: #21B6A8;
+  border: none;
+  border-radius: 150px;
+  transition: transform 0.1s;
+  height: 59% !important;
+  margin-left: 2%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-top: 26%;
 }
