--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <div class="d-flex">
       <div class="col-10">
         <div class="user-stats">
-          <div class="d-flex justify-content-between">
+          <div class="d-flex justify-content-between mt-3">
             <div class="card-summary">
               <p class="underline number-size"><%= @user.teams.exists? ? number_with_delimiter(@user.teams.count, :delimiter => ',') : "- " %></p>
               <h5># Teams</h5>
@@ -42,7 +42,7 @@
                 <% end %>
               <% end %>
           </div>
-          <div class="mt-5 table-of-contents">
+          <div class="mt-5 table-of-contents mb-5">
             <div class = "row-headers">
               <div class= "d-flex w-100">
                 <div class="table-input-2 d-flex align-items-center justify-content-center m-0">
@@ -77,20 +77,39 @@
               <% end %>
             </div>
           </div>
-          <div class="card-show-left favorite">
-            <div class="card-show-left-title d-flex justify-content-center">
-              <strong class="mt-1 mb-1">Favorite Managers</strong>
-            </div>
-            <div class="favorite_users">
-              <% if @user.followers_as_follower.present?  %>
-                <% @user.followers_as_follower.each do |favorite_instance| %>
-                  <div>
-                    <%= render 'favorites', favorite_instance: favorite_instance %>
-                  </div>
+          <div class="d-flex">
+            <div class="card-show-left favorite col-3 me-1">
+              <div class="card-show-left-title d-flex justify-content-center">
+                <strong class="mt-1 mb-1">Favorite Managers</strong>
+              </div>
+              <div class="favorite_users">
+                <% if @user.followers_as_follower.present?  %>
+                  <% @user.followers_as_follower.each do |favorite_instance| %>
+                    <div>
+                      <%= render 'favorites', favorite_instance: favorite_instance %>
+                    </div>
+                  <% end %>
                 <% end %>
-              <% end %>
+              </div>
+            </div>
+            <div class="card-show-left col-9">
+              <div class="card-show-left-title d-flex justify-content-center">
+                <div class="card-show-left-title-letters d-flex justify-content-center">
+                  <strong class="mt-1 mb-1">Axie in the News</strong>
+                  <img data-action="click->display-info#toggleContent" data-display-info-target="icon" class="minus" src="https://iconsplace.com/wp-content/uploads/_icons/ffffff/256/png/minus-2-icon-18-256.png" class="card-user-photo" alt="avatar">
+                </div>
+              </div>
+              <div data-display-info-target="content" class="">
+                <% until @article_count == 10 do %>
+                  <%= render 'articles', article_count: @article_count, articles: @articles %>
+                <% end %>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="general-stats">
           <div class="card-show-left mt-4 mb-4" >
             <div class="card-show-left-content-first">
               <a href="https://www.coingecko.com/en/coins/bitcoin">
@@ -125,30 +144,6 @@
               </a>
             </div>
           </div>
-          <div class="card-show-left" data-controller="display-info">
-            <div class="card-show-left-title d-flex justify-content-center">
-              <div class="card-show-left-title-letters d-flex justify-content-center">
-                <strong class="mt-1 mb-1">Axie in the News</strong>
-                <img data-action="click->display-info#toggleContent" data-display-info-target="icon" class="minus" src="https://iconsplace.com/wp-content/uploads/_icons/ffffff/256/png/minus-2-icon-18-256.png" class="card-user-photo" alt="avatar">
-              </div>
-            </div>
-            <div data-display-info-target="content" class="">
-              <% until @article_count == 10 do %>
-                <%= render 'articles', article_count: @article_count, articles: @articles %>
-              <% end %>
-            </div>
-          </div>
-          <div class="mt-5">
-
-          </div>
-        </div>
-      </div>
-      <div class="col-2">
-        <div class="general-stats">
-          Hola!
-          Hola!
-          Hola!
-          Hola!
         </div>
       </div>
     </div>
